--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native-dotenv": "^0.2.2",
     "jest": "^29.2.1",
     "jest-expo": "^52.0.5",
     "metro": "^0.81.2",
